data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3803.wast
;; 2. **Test with Insufficient Argument Stack Count**:    - **Description**: Create a function call where the number of arguments on the stack is less than required by `br_table` target functions.    - **Constraint Checked**: Argument count and type validation.    - **Edge Case Relation**: Tests the edge case where insufficient arguments might lead to an arity mismatch or underflow scenario.

(assert_invalid
  (module
    (func $target (param i32) (result i32)
      get_local 0
    )
    (func $test
      (i32.const 42)
      (block
        (call $target)
      )
    )
  )
  "type mismatch"
)